[gd_scene format=3 uid="uid://j4nsvow7tdci"]

[ext_resource type="Script" uid="uid://16t40jgcnsl3" path="res://script/world/shop_item_panel.gd" id="1_vm8pd"]
[ext_resource type="Texture2D" uid="uid://b601hx00u7epi" path="res://assets/Treasure Hunters/Pirate Treasure/Sprites/Gold Coin/01.png" id="2_vm8pd"]
[ext_resource type="Texture2D" uid="uid://c5an6vyve3chh" path="res://assets/custom/interac.png" id="3_dl8al"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vm8pd"]
size = Vector2(75, 76)

[node name="ShopItemPanel" type="Panel" unique_id=1962880931]
offset_left = 38.0
offset_top = -75.0
offset_right = 104.0
offset_bottom = -23.0
script = ExtResource("1_vm8pd")
item_id = null

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=320050012]
position = Vector2(32, 25)

[node name="ItemNameLabel" type="Label" parent="." unique_id=1381092]
layout_mode = 0
offset_right = 132.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemCostLabel" type="Label" parent="." unique_id=1786833474]
layout_mode = 0
offset_left = 8.0
offset_top = 42.0
offset_right = 122.0
offset_bottom = 65.0
scale = Vector2(0.5, 0.5)
text = "50"
vertical_alignment = 2

[node name="IconItemCost" type="Sprite2D" parent="." unique_id=1950727228]
position = Vector2(4, 48)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_vm8pd")

[node name="InteractSprite" type="Sprite2D" parent="." unique_id=745082325]
position = Vector2(35, -12.0000105)
scale = Vector2(1.6500002, 1.4318179)
texture = ExtResource("3_dl8al")

[node name="Area2D" type="Area2D" parent="." unique_id=562760934]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=486035970]
position = Vector2(32.5, 38)
shape = SubResource("RectangleShape2D_vm8pd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
